# esp32-digital-photo-frame-v2

./: CMakeLists.txt  Readme.md  filelist.txt  gfx_conf.h  lv_conf.h  ui.c  ui.h  ui.ino  ui_Screen1.c  ui_Screen2.c  ui_comp_hook.c  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_685164422.c  ui_img_background_png.c  ui_img_family_png.c  ui_img_fourpeople_png.c  ui_img_gallery2_png.c  ui_img_home_png.c  ui_img_kedarnath_png.c  ui_img_otherfriends_png.c  ui_img_rishikesh_png.c
