SET(SOURCES ui_Screen1.c
    ui_Screen2.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_background_png.c
    ui_img_685164422.c
    ui_img_kedarnath_png.c
    ui_img_family_png.c
    ui_img_fourpeople_png.c
    ui_img_rishikesh_png.c
    ui_img_home_png.c
    ui_img_otherfriends_png.c)

add_library(ui ${SOURCES})
